--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=http://148.202.42.100/
+DB_HOST = 148.202.42.100
 DB_PORT=3306
 DB_DATABASE=sistema_medico
 DB_USERNAME=sige
