--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST = 148.202.42.100
+DB_HOST = localhost
 DB_PORT=3306
 DB_DATABASE=sistema_medico
-DB_USERNAME=sige
-DB_PASSWORD=&SoporteWeb
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
